--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,18 @@ jobs:
     working_directory: /go/src/github.com/carlpett/influxdb_stats_exporter
     steps:
       - checkout
-      - run: echo -n "Building release for "; git describe --always --tags | tee VERSION
-      - run: promu crossbuild
-      - run: promu crossbuild tarballs
-      - run: promu checksum .tarballs
-      - run: promu release .tarballs
+      - run:
+          name: Set version
+          command: echo -n "Building release for "; git describe --always --tags | sed 's/^v//' | tee VERSION
+      - run: make tarball
+      - run:
+          name: Download github-release tool
+          command: curl -sL 'https://github.com/aktau/github-release/releases/download/v0.6.2/linux-amd64-github-release.tar.bz2' | tar xjf - --strip-components 3 -C /go/bin
+      - run: promu release tarballs
+      - store_artifacts:
+          path: tarballs
+          destination: releases
+
 workflows:
   version: 2
   build_and_release:
