--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
           name: Download github-release tool
           command: curl -sL 'https://github.com/aktau/github-release/releases/download/v0.6.2/linux-amd64-github-release.tar.bz2' | tar xjf - --strip-components 3 -C /go/bin
       - run: promu release tarballs
+      - run: promu checksum tarballs
       - store_artifacts:
           path: tarballs
           destination: releases
