updated to handle ssl.skip-verify as a boolean flag

--- a/helm/influxdb-stats-exporter/values.yaml
+++ b/helm/influxdb-stats-exporter/values.yaml
@@ -70,7 +70,7 @@ log:
 
 ssl:
   # Skip SSL Certificate Validation (default: false)
-  skipVerify: "false"
+  skipVerify: false
 
 web:
   # Port on which to expose metrics
