--- a/helm/influxdb-stats-exporter/templates/deployment.yaml
+++ b/helm/influxdb-stats-exporter/templates/deployment.yaml
@@ -34,9 +34,11 @@ spec:
           args:
             - '--log.level={{ .Values.log.level }}'
             - '--influx.url={{ .Values.influx.url }}'
-            - '--ssl.skip-verify={{ .Values.ssl.skipVerify }}'
             - '--web.listen-address={{ .Values.web.listenAddress }}'
             - '--web.metrics-path={{ .Values.web.metricsPath }}'
+          {{- if .Values.ssl.skipVerify }}
+            - '--ssl.skip-verify'
+          {{- end }}
           env:
           {{- if .Values.influx.auth.user }}
             - name: INFLUX_USER
